src/grammar/.antlr/OPLangParser.py
# Generated from c:/Users/khahu/Desktop/CO3005_Assignment/src/grammar/OPLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OPLangParser ( Parser ):

    grammarFileName = "OPLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'boolean'", "'break'", "'class'", "'continue'", 
                     "'do'", "'else'", "'extends'", "'float'", "'if'", "'int'", 
                     "'new'", "'string'", "'then'", "'for'", "'return'", 
                     "'true'", "'false'", "'void'", "'nil'", "'this'", "'final'", 
                     "'static'", "'to'", "'downto'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'\\'", 
                     "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'&&'", 
                     "'||'", "'!'", "'^'", "':='", "'='", "'['", "']'", 
                     "'('", "')'", "'{'", "'}'", "';'", "':'", "'.'", "','", 
                     "'~'", "'&'" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN", "BREAK", "CLASS", "CONTINUE", 
                      "DO", "ELSE", "EXTENDS", "FLOAT", "IF", "INT", "NEW", 
                      "STRING", "THEN", "FOR", "RETURN", "TRUE", "FALSE", 
                      "VOID", "NIL", "THIS", "FINAL", "STATIC", "TO", "DOWNTO", 
                      "WS", "LINE_COMMENT", "BLOCK_COMMENT", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "BACKSLASH", "EQ", "NEQ", "GT", 
                      "LT", "GTE", "LTE", "AND", "OR", "NOT", "CONCAT", 
                      "ASSIGN_OP", "ASSIGN", "LSB", "RSB", "LP", "RP", "LCB", 
                      "RCB", "SEMI", "COLON", "DOT", "COMMA", "TILDE", "AMPERSAND", 
                      "INT_LIT", "FLOAT_LIT", "ERROR_FLOAT", "STRING_LIT", 
                      "STRING_LITERAL", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", 
                      "IDENTIFIER", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classdecl = 1
    RULE_vardecl = 2
    RULE_varList = 3
    RULE_var = 4
    RULE_arrayInit = 5
    RULE_funcdecl = 6
    RULE_paramlist = 7
    RULE_param = 8
    RULE_block = 9
    RULE_stmt = 10
    RULE_return = 11
    RULE_ifstmt = 12
    RULE_forstmt = 13
    RULE_datatype = 14
    RULE_basetype = 15
    RULE_modifier = 16
    RULE_expr = 17
    RULE_arglist = 18

    ruleNames =  [ "program", "classdecl", "vardecl", "varList", "var", 
                   "arrayInit", "funcdecl", "paramlist", "param", "block", 
                   "stmt", "return", "ifstmt", "forstmt", "datatype", "basetype", 
                   "modifier", "expr", "arglist" ]

    EOF = Token.EOF
    BOOLEAN=1
    BREAK=2
    CLASS=3
    CONTINUE=4
    DO=5
    ELSE=6
    EXTENDS=7
    FLOAT=8
    IF=9
    INT=10
    NEW=11
    STRING=12
    THEN=13
    FOR=14
    RETURN=15
    TRUE=16
    FALSE=17
    VOID=18
    NIL=19
    THIS=20
    FINAL=21
    STATIC=22
    TO=23
    DOWNTO=24
    WS=25
    LINE_COMMENT=26
    BLOCK_COMMENT=27
    ADD=28
    SUB=29
    MUL=30
    DIV=31
    MOD=32
    BACKSLASH=33
    EQ=34
    NEQ=35
    GT=36
    LT=37
    GTE=38
    LTE=39
    AND=40
    OR=41
    NOT=42
    CONCAT=43
    ASSIGN_OP=44
    ASSIGN=45
    LSB=46
    RSB=47
    LP=48
    RP=49
    LCB=50
    RCB=51
    SEMI=52
    COLON=53
    DOT=54
    COMMA=55
    TILDE=56
    AMPERSAND=57
    INT_LIT=58
    FLOAT_LIT=59
    ERROR_FLOAT=60
    STRING_LIT=61
    STRING_LITERAL=62
    ILLEGAL_ESCAPE=63
    UNCLOSE_STRING=64
    IDENTIFIER=65
    ERROR_CHAR=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(OPLangParser.EOF, 0)

        def classdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPLangParser.ClassdeclContext)
            else:
                return self.getTypedRuleContext(OPLangParser.ClassdeclContext,i)


        def getRuleIndex(self):
            return OPLangParser.RULE_program




    def program(self):

        localctx = OPLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 38
                self.classdecl()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(OPLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(OPLangParser.CLASS, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(OPLangParser.IDENTIFIER)
            else:
                return self.getToken(OPLangParser.IDENTIFIER, i)

        def LCB(self):
            return self.getToken(OPLangParser.LCB, 0)

        def RCB(self):
            return self.getToken(OPLangParser.RCB, 0)

        def EXTENDS(self):
            return self.getToken(OPLangParser.EXTENDS, 0)

        def vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPLangParser.VardeclContext)
            else:
                return self.getTypedRuleContext(OPLangParser.VardeclContext,i)


        def funcdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPLangParser.FuncdeclContext)
            else:
                return self.getTypedRuleContext(OPLangParser.FuncdeclContext,i)


        def getRuleIndex(self):
            return OPLangParser.RULE_classdecl




    def classdecl(self):

        localctx = OPLangParser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(OPLangParser.CLASS)
            self.state = 47
            self.match(OPLangParser.IDENTIFIER)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 48
                self.match(OPLangParser.EXTENDS)
                self.state = 49
                self.match(OPLangParser.IDENTIFIER)


            self.state = 52
            self.match(OPLangParser.LCB)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 6558978) != 0) or _la==65:
                self.state = 55
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 53
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 54
                    self.funcdecl()
                    pass


                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(OPLangParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def datatype(self):
            return self.getTypedRuleContext(OPLangParser.DatatypeContext,0)


        def varList(self):
            return self.getTypedRuleContext(OPLangParser.VarListContext,0)


        def SEMI(self):
            return self.getToken(OPLangParser.SEMI, 0)

        def modifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPLangParser.ModifierContext)
            else:
                return self.getTypedRuleContext(OPLangParser.ModifierContext,i)


        def getRuleIndex(self):
            return OPLangParser.RULE_vardecl




    def vardecl(self):

        localctx = OPLangParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21 or _la==22:
                self.state = 62
                self.modifier()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.datatype()
            self.state = 69
            self.varList()
            self.state = 70
            self.match(OPLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPLangParser.VarContext)
            else:
                return self.getTypedRuleContext(OPLangParser.VarContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(OPLangParser.COMMA)
            else:
                return self.getToken(OPLangParser.COMMA, i)

        def getRuleIndex(self):
            return OPLangParser.RULE_varList




    def varList(self):

        localctx = OPLangParser.VarListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.var()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==55:
                self.state = 73
                self.match(OPLangParser.COMMA)
                self.state = 74
                self.var()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(OPLangParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(OPLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(OPLangParser.ExprContext,0)


        def arrayInit(self):
            return self.getTypedRuleContext(OPLangParser.ArrayInitContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_var




    def var(self):

        localctx = OPLangParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(OPLangParser.IDENTIFIER)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 81
                self.match(OPLangParser.ASSIGN)
                self.state = 84
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [11, 16, 17, 19, 48, 58, 59, 61, 65]:
                    self.state = 82
                    self.expr(0)
                    pass
                elif token in [50]:
                    self.state = 83
                    self.arrayInit()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(OPLangParser.LCB, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(OPLangParser.ExprContext,i)


        def RCB(self):
            return self.getToken(OPLangParser.RCB, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(OPLangParser.COMMA)
            else:
                return self.getToken(OPLangParser.COMMA, i)

        def arrayInit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPLangParser.ArrayInitContext)
            else:
                return self.getTypedRuleContext(OPLangParser.ArrayInitContext,i)


        def getRuleIndex(self):
            return OPLangParser.RULE_arrayInit




    def arrayInit(self):

        localctx = OPLangParser.ArrayInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arrayInit)
        self._la = 0 # Token type
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(OPLangParser.LCB)
                self.state = 89
                self.expr(0)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==55:
                    self.state = 90
                    self.match(OPLangParser.COMMA)
                    self.state = 91
                    self.expr(0)
                    self.state = 96
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 97
                self.match(OPLangParser.RCB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(OPLangParser.LCB)
                self.state = 100
                self.arrayInit()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==55:
                    self.state = 101
                    self.match(OPLangParser.COMMA)
                    self.state = 102
                    self.arrayInit()
                    self.state = 107
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 108
                self.match(OPLangParser.RCB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def datatype(self):
            return self.getTypedRuleContext(OPLangParser.DatatypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(OPLangParser.IDENTIFIER, 0)

        def LP(self):
            return self.getToken(OPLangParser.LP, 0)

        def RP(self):
            return self.getToken(OPLangParser.RP, 0)

        def block(self):
            return self.getTypedRuleContext(OPLangParser.BlockContext,0)


        def modifier(self):
            return self.getTypedRuleContext(OPLangParser.ModifierContext,0)


        def AMPERSAND(self):
            return self.getToken(OPLangParser.AMPERSAND, 0)

        def paramlist(self):
            return self.getTypedRuleContext(OPLangParser.ParamlistContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_funcdecl




    def funcdecl(self):

        localctx = OPLangParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21 or _la==22:
                self.state = 112
                self.modifier()


            self.state = 115
            self.datatype()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==57:
                self.state = 116
                self.match(OPLangParser.AMPERSAND)


            self.state = 119
            self.match(OPLangParser.IDENTIFIER)
            self.state = 120
            self.match(OPLangParser.LP)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 267522) != 0) or _la==65:
                self.state = 121
                self.paramlist()


            self.state = 124
            self.match(OPLangParser.RP)
            self.state = 125
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPLangParser.ParamContext)
            else:
                return self.getTypedRuleContext(OPLangParser.ParamContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(OPLangParser.SEMI)
            else:
                return self.getToken(OPLangParser.SEMI, i)

        def getRuleIndex(self):
            return OPLangParser.RULE_paramlist




    def paramlist(self):

        localctx = OPLangParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.param()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==52:
                self.state = 128
                self.match(OPLangParser.SEMI)
                self.state = 129
                self.param()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def datatype(self):
            return self.getTypedRuleContext(OPLangParser.DatatypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(OPLangParser.IDENTIFIER, 0)

        def AMPERSAND(self):
            return self.getToken(OPLangParser.AMPERSAND, 0)

        def ASSIGN(self):
            return self.getToken(OPLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(OPLangParser.ExprContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_param




    def param(self):

        localctx = OPLangParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.datatype()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==57:
                self.state = 136
                self.match(OPLangParser.AMPERSAND)


            self.state = 139
            self.match(OPLangParser.IDENTIFIER)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 140
                self.match(OPLangParser.ASSIGN)
                self.state = 141
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(OPLangParser.LCB, 0)

        def RCB(self):
            return self.getToken(OPLangParser.RCB, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(OPLangParser.StmtContext,i)


        def getRuleIndex(self):
            return OPLangParser.RULE_block




    def block(self):

        localctx = OPLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(OPLangParser.LCB)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3171941512559714050) != 0) or _la==65:
                self.state = 145
                self.stmt()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self.match(OPLangParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(OPLangParser.VardeclContext,0)


        def IDENTIFIER(self):
            return self.getToken(OPLangParser.IDENTIFIER, 0)

        def ASSIGN_OP(self):
            return self.getToken(OPLangParser.ASSIGN_OP, 0)

        def expr(self):
            return self.getTypedRuleContext(OPLangParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(OPLangParser.SEMI, 0)

        def block(self):
            return self.getTypedRuleContext(OPLangParser.BlockContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(OPLangParser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(OPLangParser.ForstmtContext,0)


        def return_(self):
            return self.getTypedRuleContext(OPLangParser.ReturnContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_stmt




    def stmt(self):

        localctx = OPLangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.match(OPLangParser.IDENTIFIER)
                self.state = 155
                self.match(OPLangParser.ASSIGN_OP)
                self.state = 156
                self.expr(0)
                self.state = 157
                self.match(OPLangParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 159
                self.block()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 160
                self.expr(0)
                self.state = 161
                self.match(OPLangParser.SEMI)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 163
                self.ifstmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 164
                self.forstmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 165
                self.return_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(OPLangParser.RETURN, 0)

        def SEMI(self):
            return self.getToken(OPLangParser.SEMI, 0)

        def expr(self):
            return self.getTypedRuleContext(OPLangParser.ExprContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_return




    def return_(self):

        localctx = OPLangParser.ReturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_return)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(OPLangParser.RETURN)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 11)) & ~0x3f) == 0 and ((1 << (_la - 11)) & 19562648320344417) != 0):
                self.state = 169
                self.expr(0)


            self.state = 172
            self.match(OPLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(OPLangParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(OPLangParser.ExprContext,0)


        def THEN(self):
            return self.getToken(OPLangParser.THEN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(OPLangParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(OPLangParser.ELSE, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_ifstmt




    def ifstmt(self):
